# NTFSReader

./: CMakeLists.txt  README.md  controller.cpp  controller.h  main.cpp
docs/: DDStructure.txt  E01Structure.txt  NTFSStructure.txt
layers/disk/: disk.cpp  disk.h  guid.cpp  guid.h  interface.cpp  interface.h  logic.cpp  logic.h
layers/filesystem/: filesystem.cpp  filesystem.h  interface.cpp  interface.h  ntfs.cpp  ntfs.h
layers/image/: dd.cpp  dd.h  e01.cpp  e01.h  image.cpp  image.h  interface.cpp  interface.h
